--- a/Cours_IA_S4_Master_CCM.ipynb
+++ b/Cours_IA_S4_Master_CCM.ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/tocram1/AppEngineExercise/blob/master/Cours_IA_S4_Master_CCM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {
@@ -34,8 +24,7 @@
       "source": [
         "# On installe et charge Scipy\n",
         "%pip install scipy\n",
-        "import scipy\n",
-        "\n"
+        "import scipy"
       ]
     },
     {
@@ -453,8 +442,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxApqE7QMIG8KDcNbHs5Ho",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNElxmeMV22jZU+H29ApLFl"
     },
     "gpuClass": "standard",
     "kernelspec": {
